--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit
-httpx
-requests
-python-dotenv
-openai
+streamlit==1.32.0
+httpx==0.26.0
+requests==2.31.0
+plotly==5.22.0
+openai==1.12.0
+python-dotenv==1.0.0
