--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,13 @@
+[browser]
+gatherUsageStats = false
+
 [server]
-headless = true
 enableCORS = false
-enableXsrfProtection = true
-port = 8080
+enableXsrfProtection = false
+enableWebsocketCompression = false
+
+[theme]
+primaryColor = "#4CAF50"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#F0F2F6"
+textColor = "#000000"
